[package]
name = "van_der_waals_interactions"
version = "0.1.0"
authors = ["phucn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_flycam = "*"
clap = "3.0.0-beta.2"
ringbuffer = "0.4.0"
rayon = "1.5.0"
ndarray = "0.14.0"
itertools = "0.9.0"
rand = "0.8.3"
rand_distr = "0.4.0"